Integration Test Covering Whole OIDC Code